# mml

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  config.sample.toml  default.nix  deny.toml  emacs.eml  emacs.mml  flake.nix  install.sh  package.nix  rust-toolchain.nix  shell.nix
.github/workflows/: pre-release.yml  pre-releases.yml  release-on-demand.yml  release.yml  releases.yml
src/: error.rs  grammar.rs  header.rs  lib.rs  main.rs
src/cli/: account.rs  args.rs  choice.rs  cli.rs  compile.rs  compose.rs  config.rs  editor.rs  forward.rs  interpret.rs  mml.rs  mod.rs  read.rs  reply.rs  stdin.rs
src/cli/template/: compose.rs  forward.rs  mod.rs  reply.rs  template.rs
src/cli/utils/: choice.rs  editor.rs  mod.rs
src/compiler/: body.rs  cli.rs  message.rs  mod.rs
src/compiler/parser/: mod.rs  parts.rs  prelude.rs  props.rs  tokens.rs  vals.rs
src/compl/: args.rs  handlers.rs  mod.rs
src/interpreter/: body.rs  cli.rs  message.rs  mod.rs
src/man/: args.rs  handlers.rs
src/message/: compiler.rs  header.rs  interpreter.rs  mod.rs
src/message/body/: interpreter.rs  mod.rs
src/message/body/compiler/: mod.rs  tokens.rs
src/message/body/compiler/parsers/: mod.rs  parts.rs  props.rs
src/mml/: args.rs  handlers.rs  mod.rs
src/mml/compiler/: args.rs  handlers.rs
src/mml/interpreter/: args.rs  handlers.rs
src/template/: address.rs  cli.rs  compose.rs  forward.rs  mod.rs  new.rs  reply.rs  template.rs  types.rs
src/template/compose/: builder.rs  cli.rs
src/template/forward/: builder.rs  cli.rs  mod.rs
src/template/reply/: builder.rs  cli.rs
