[package]
name = "mml"
description = "Rust implementation of the Emacs MIME message Meta Language (MML)"
version = "1.0.0"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "email", "text-processing"]
keywords = ["email", "mime", "message", "mml", "emacs"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/mml/latest/mml"
repository = "https://github.com/pimalaya/mml"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["compiler", "interpreter", "cli"]
cli = ["dep:anyhow", "dep:ariadne", "dep:clap", "dep:edit", "dep:pimalaya-cli", "dep:pimalaya-config", "dep:serde"]
compiler = ["dep:chumsky", "dep:shellexpand", "dep:tree_magic_mini"]
interpreter = ["dep:nanohtml2text"]

[[bin]]
name = "mml"
path = "src/main.rs"
required-features = ["cli"]

[build-dependencies]
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["build"], optional = true }

[dev-dependencies]
concat-with = "0.2"
tempfile = "3"

[dependencies]
anyhow = { version = "1", optional = true }
ariadne = { version = "0.3", optional = true }
chumsky = { version = "=1.0.0-alpha.8", optional = true, features = ["std"] }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"], optional = true }
edit = { version = "0.1", optional = true }
log = "0.4"
mail-builder = "0.3"
mail-parser = "0.9"
nanohtml2text = { version = "0.1", optional = true }
once_cell = "1.21"
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["prompt", "terminal"], optional = true }
pimalaya-config = { version = "0.0.1", default-features = false, features = ["toml"], optional = true }
regex = "1.12"
serde = { version = "1", features = ["derive"], optional = true }
shellexpand = { version = "3.1", optional = true }
thiserror = "2"
tree_magic_mini = { version = "3", optional = true }

[patch.crates-io]
pimalaya-cli.git = "https://github.com/pimalaya/cli"
pimalaya-config.git = "https://github.com/pimalaya/config"
